--- a/style.css
+++ b/style.css
@@ -74,12 +74,12 @@ img {
     display: block;
     background-color: white;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);
+    transition: all .2s;
 }
 
 .main__link:hover, .main__link:focus {
     color: white;
     background-color: var(--soft-magenta);
-    transition: .2s;
 }
 
 .social__icons {
